--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <li>📊 Zomato Order Analysis and Customer Churn Analysis using Power BI</li>
             <li>🎨 Image Processing for Color Segregation and Channel Separation</li>
             <li>🤖 Restaurant Orders Analysis in Data Science using ML
-                <div id="video1"><vidoe src="videos/ds_video.mp4" type="video/mp4"></video></div>
+                <video src="videos/ds_video.mp4" type="video/mp4" controls></video>
             </li>
             <li>🌐 JNS PG Hostel Website (HTML, CSS, JavaScript) - Launching Soon</li>
         </ul>
@@ -126,7 +126,7 @@
         <p>📧 <a href="mailto:nagireddyj671@gmail.com">nagireddyj671@gmail.com</a></p>
      <div id="logos">
         <p> <a href="https://www.linkedin.com/in/jampana-nagi-reddy-751baa239" target="_blank"> 
-                  <img src="linkedin.png" height="200" width="200" alt="linkedin-logo">
+                  <img src="linkedin.png" height="200" alt="linkedin">
                 </a>
         </p>
         <p> <a href="https://github.com/nagi-672" target="_blank">
