--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <p>📧 <a href="mailto:nagireddyj671@gmail.com">nagireddyj671@gmail.com</a></p>
      <div id="logos">
         <p> <a href="https://www.linkedin.com/in/jampana-nagi-reddy-751baa239" target="_blank"> 
-                  <img src="C:\Users\Suguna Mulapaku\portfolio\images\linkedin.png" height="200" alt="linkedin">
+                  <img src="linkedin.png" height="200" alt="linkedin">
                 </a>
         </p>
         <p> <a href="https://github.com/nagi-672" target="_blank">
