--- a/index.html
+++ b/index.html
@@ -130,15 +130,15 @@
                 </a>
         </p>
         <p> <a href="https://github.com/nagi-672" target="_blank">
-              <img src="images/github-logo.png" height="200" alt="github github-logo">
+              <img src="github-logo.png" height="200" alt="github github-logo">
             </a>
         </p>
         <p> <a href="https://www.instagram.com/nagi_reddy_j?igsh=MWMweXBtaGRkd2lqYw==" target="_blank">
-                <img src="images/instagram-logo.png" height="200" alt="instagram logo">
+                <img src="instagram-logo.png" height="200" alt="instagram logo">
             </a>
         </p> 
         <p> <a href="https://www.kaggle.com/jampananagireddy" target="_blank">
-              <img src="images/kaggle-logo.png" height="200" alt="kaggle-logo">
+              <img src="kaggle-logo.png" height="200" alt="kaggle-logo">
             </a>
         </p>          
      </div>   
