--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <li>📊 Zomato Order Analysis and Customer Churn Analysis using Power BI</li>
             <li>🎨 Image Processing for Color Segregation and Channel Separation</li>
             <li>🤖 Restaurant Orders Analysis in Data Science using ML
-                <video src="videos/ds_video.mp4" type="video/mp4" controls></video>
+                <iframe id="iframe1"><iframe width="560" height="3000" src="https://www.youtube.com/embed/jcKfTiztFYM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
             </li>
             <li>🌐 JNS PG Hostel Website (HTML, CSS, JavaScript) - Launching Soon</li>
         </ul>
